group label as image in new table row

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
   </head>
   <body>
 	<div>
-		<div class="group" style="background-image: url('fructe.png');">
+		<div class="group" style="background-color: coral;">
 			<table align="center">
 				<tr><td>
-					<input id="Portocale" type="image" />
+					<img src="fructe.png">
+				</td></tr>
+				<tr><td>
+						<input id="Portocale" type="image" />
 				</td></tr>
 				<tr><td>
 					<input id="Mar" type="image" />
