how to center an image

--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
 		.comanda {
 		  float: right;
 		}
+		.center {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			/*width: 50%;*/
+		}
 	  </style>
   </head>
   <body>
 	<div>
-		<div class="group" style="background-color: coral;">
+		<div class="group" style="background-color: #ffefae;">
+			<img src="fructe.png" class="center">
 			<table align="center">
-				<tr><td>
-					<img src="fructe.png">
-				</td></tr>
 				<tr><td>
 						<input id="Portocale" type="image" />
 				</td></tr>
