groups headers added

--- a/index.html
+++ b/index.html
@@ -58,13 +58,18 @@
 			</table>
 		
 		</div>
-		<div class="group" style="background-image: url('legume.png');">
+		<div class="group" style="background-color: #ffdac1;">
+			<img src="legume.png" class="center">
 			<input id="Patrunjel" type="image" />
+		</div>
+		<div class="group" style="background-color: #e9f5d8;">
+			<img src="verdeturi.png" class="center">
+		</div>
+		<div class="group" style="background-color: #e1f5fc;">
+			<img src="specials.png" class="center">
 		</div>
 	</div>
 	<div>
-	  <img src="verdeturi.png">
-	  <img src="specials.png">
 
   <div class="comanda" align="center">
 	<input id="banana" type="image" width="70" height="65" />
