--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 		}
 		.group {
 			float: left;
-			width: 20%;
+			width: 18%;
 			align-items: center;
 		}
 		.comanda {
-		  float: right;
+			width: 28%;
+			float: right;
 		}
 		.center {
 			display: block;
@@ -71,8 +72,9 @@
 	</div>
 	<div>
 
-  <div class="comanda" align="center">
-	<input id="banana" type="image" width="70" height="65" />
+  <div class="comanda" style="background-color: #f2f2f2;">
+	<img src="moodfresh.png" class="center">
+	<img src="pahar.png" class="center">
 	<input id="x" src="x.png" onclick="remove_fruit()" type="image" width="70" height="65" />
 	<br>
 	<canvas id="canvas" width="120" height="404">
