added elimina button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class="comanda" style="background-color: #f2f2f2;">
 	<img src="moodfresh.png" class="center">
 	<img src="pahar.png" class="center">
-	<input id="x" src="x.png" onclick="remove_fruit()" type="image" width="70" height="65" />
+	<input id="x" src="elimina.png" onclick="remove_fruit()" type="image"/>
 	<br>
 	<canvas id="canvas" width="120" height="404">
 		Pahar
