--- a/index.html
+++ b/index.html
@@ -74,12 +74,15 @@
 
   <div class="comanda" style="background-color: #f2f2f2;">
 	<img src="moodfresh.png" class="center">
-	<img src="pahar.png" class="center">
+	<div style="position:relative;">
+		<img src="pahar.png" class="center" style="position:absolute; top:0; left:0;">
+		<canvas id="canvas" width="120" height="404" style="position:absolute; top:0; left:0;">
+			Pahar
+		</canvas>
+	</div>
+	<img src="pret.png" class="center">
 	<input id="x" src="elimina.png" onclick="remove_fruit()" type="image"/>
 	<br>
-	<canvas id="canvas" width="120" height="404">
-		Pahar
-	</canvas>
 
 	<p><b><font id="total" size="+3" color="#ffff00">Total</font></b></p>
 	<p><b><font id="grams" size="+3" color="#000000"><b>0 gr.</font></b></p>
