800px height of group and command columns. relative positioning of 'pret' and 'elimina'

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 		.group {
 			float: left;
 			width: 18%;
+			height: 800px;
 			align-items: center;
 		}
 		.comanda {
 			width: 28%;
+			height: 800px;
 			float: right;
 		}
 		.center {
@@ -80,13 +82,13 @@
 			Pahar
 		</canvas>
 	</div>
-	<img src="pret.png" class="center">
-	<input id="x" src="elimina.png" onclick="remove_fruit()" type="image"/>
+	<img src="pret.png" style="position: relative; top: 520px; left: 20px">
+	<input id="x" src="elimina.png" onclick="remove_fruit()" type="image" style="position: relative; top: 650px;"/>
 	<br>
 
 	<p><b><font id="total" size="+3" color="#ffff00">Total</font></b></p>
 	<p><b><font id="grams" size="+3" color="#000000"><b>0 gr.</font></b></p>
-</div>
+  </div>
 </div>
 <script>
 		var canvas = document.getElementById('canvas');
