no table; no box-sizing; group padding

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <title>Your Mix</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-		* {
- 			box-sizing: border-box;
-		}
 		.group {
 			float: left;
 			width: 18%;
 			height: 800px;
 			align-items: center;
+			padding-top: 40px;
 		}
 		.comanda {
 			width: 28%;
@@ -22,7 +20,12 @@
 			display: block;
 			margin-left: auto;
 			margin-right: auto;
-			/*width: 50%;*/
+		}
+		input {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			padding-top: 10px;
 		}
 	  </style>
   </head>
@@ -30,36 +33,16 @@
 	<div>
 		<div class="group" style="background-color: #ffefae;">
 			<img src="fructe.png" class="center">
-			<table align="center">
-				<tr><td>
-						<input id="Portocale" type="image" />
-				</td></tr>
-				<tr><td>
-					<input id="Mar" type="image" />
-				</td></tr>
-				<tr><td>
-					<input id="Banane" type="image" />
-				</td></tr>
-				<tr><td>
-					<input id="Lamaie" type="image" />
-				</td></tr>
-				<tr><td>
-					<input id="Lime" type="image" />
-				</td></tr>
-				<tr><td>
-					<input id="Kiwi" type="image" />
-				</td></tr>
-				<tr><td>
-					<input id="Ananas" type="image" />
-				</td></tr>
-				<tr><td>
-					<input id="Cocos" type="image" />
-				</td></tr>
-				<tr><td>
-					<input id="Grapefruit" type="image" />
-				</td></tr>
-			</table>
-		
+
+			<input id="Portocale" type="image"/>
+			<input id="Mar" type="image" />
+			<input id="Banane" type="image" />
+			<input id="Lamaie" type="image" />
+			<input id="Lime" type="image" />
+			<input id="Kiwi" type="image" />
+			<input id="Ananas" type="image" />
+			<input id="Cocos" type="image" />
+			<input id="Grapefruit" type="image" />
 		</div>
 		<div class="group" style="background-color: #ffdac1;">
 			<img src="legume.png" class="center">
