vertical alignments of group headers

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 			align-items: center;
 			padding-top: 40px;
 		}
+		.group img {
+			padding-bottom: 50px;
+		}
 		.comanda {
 			width: 28%;
 			height: 800px;
 			float: right;
+			padding-top: 29px;
+		}
+		.comanda img {
+			padding-bottom: 50px;
 		}
 		.center {
 			display: block;
