almost where they should be

--- a/index.html
+++ b/index.html
@@ -79,15 +79,14 @@
 			Pahar
 		</canvas>
 	</div>
-	<p style="position: relative; top: 550px; left: 100px">
-		<b><font id="total" size="+1" color="#878fa3">0 RON</font></b>
-	</p>
-	<input id="x" src="elimina.png" onclick="remove_fruit()" type="image" style="position: relative; top: 550px; left: 20px"/>
-	<br>
 
 	<p><b><font id="grams" size="+3" color="#000000"><b>0 gr.</font></b></p>
 	<div class="bottom">
 		<img src="pret.png">
+		<p>
+			<b><font id="total" size="+1" color="#878fa3">0 RON</font></b>
+		</p>
+		<input id="x" src="elimina.png" onclick="remove_fruit()" type="image"/>
 	</div>
   </div>
 </div>
