centered the mililiters

--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
 		</canvas>
 	</div>
 
-	<p><b><font id="grams" size="+3" color="#000000"><b>0 gr.</font></b></p>
+	<div  class="filling-cup">
+			<p><b><font id="grams" size="+1" color="#878fa3"><b>0 ml</font></b></p>
+	</div>
+
 	<div class="bottom">
 		<img src="pret.png">
 		<p>
