centered the bottom

--- a/index.html
+++ b/index.html
@@ -36,11 +36,20 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-      }
-	  .bottom {
-        position: absolute;
-        bottom: 0;
-      }
+		}
+		.bottom {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+
+			position: absolute;
+			bottom: 0px;
+			margin-left: auto;
+			margin-right: auto;
+			left: 0px;
+  			right: 0px;
+		}
 	</style>
   </head>
   <body>
@@ -80,7 +89,7 @@
 		</canvas>
 	</div>
 
-	<div  class="filling-cup">
+	<div class="filling-cup">
 			<p><b><font id="grams" size="+1" color="#878fa3"><b>0 ml</font></b></p>
 	</div>
 
