bottom background added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			height: 800px;
 			float: right;
 			padding-top: 29px;
+			background-color: #f2f2f2;
+
 		}
 		.center {
 			display: block;
@@ -44,11 +46,14 @@
 			flex-direction: column;
 
 			position: absolute;
-			bottom: 0px;
+			bottom: 30px;
 			margin-left: auto;
 			margin-right: auto;
 			left: 0px;
   			right: 0px;
+
+			background-image: url('comanda.png');
+			background-size: contain;
 		}
 	</style>
   </head>
@@ -80,7 +85,7 @@
 	</div>
 	<div>
 
-  <div class="comanda" style="background-color: #f2f2f2;">
+  <div class="comanda">
 	<img src="moodfresh.png" class="center" style="padding-bottom: 50px;">
 	<div  class="filling-cup">
 		<canvas id="canvas" width="120" height="216" style="position:absolute;">
