--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 			float: right;
 			padding-top: 29px;
 			background-color: #f2f2f2;
-
 		}
 		.center {
 			display: block;
@@ -46,14 +45,15 @@
 			flex-direction: column;
 
 			position: absolute;
-			bottom: 30px;
+			bottom: 0px;
 			margin-left: auto;
 			margin-right: auto;
 			left: 0px;
   			right: 0px;
 
 			background-image: url('comanda.png');
-			background-size: contain;
+			background-size: cover;
+			padding-top: 30px;
 		}
 	</style>
   </head>
