fixed list mililiters of ingredient

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			var tot_sum = document.getElementById('grams');
 			tot_sum.innerHTML = '';
 			for (let i = 0; i < ingredients.length; i += 3) {
-				tot_sum.innerHTML += ingredients[i] + ' ' + level + ' ml.' + "<br />";
+				tot_sum.innerHTML += ingredients[i] + ' ' + ingredients[i+1] + ' ml.' + "<br />";
 			}
 		}
 
