total mililiters added

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 			for (let i = 0; i < ingredients.length; i += 3) {
 				tot_sum.innerHTML += ingredients[i] + ' ' + ingredients[i+1] + ' ml.' + "<br />";
 			}
+			tot_sum.innerHTML += total + ' ml.';
 		}
 
 		function add_fruit(name, fill, gr, price) {
