added 'comanda' button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			left: 0px;
   			right: 0px;
 
-			background-image: url('comanda.png');
+			background-image: url('arch.png');
 			background-size: cover;
 			padding-top: 30px;
 		}
@@ -103,7 +103,10 @@
 		<p>
 			<b><font id="total" size="+1" color="#878fa3">0 RON</font></b>
 		</p>
-		<input id="x" src="elimina.png" onclick="remove_fruit()" type="image"/>
+		<div style="display: inline;">
+			<input id="x" src="elimina.png" onclick="remove_fruit()" type="image"/>
+			<input id="cmd" src="comanda.png" onclick="remove_fruit()" type="image"/>
+		</div>
 	</div>
   </div>
 </div>
