--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 		<p>
 			<b><font id="total" size="+1" color="#878fa3">0 RON</font></b>
 		</p>
-		<div style="display: inline;">
-			<input id="x" src="elimina.png" onclick="remove_fruit()" type="image"/>
-			<input id="cmd" src="comanda.png" onclick="remove_fruit()" type="image"/>
+		<div style="display: inline; width: 90%;">
+			<input id="x" src="elimina.png" onclick="remove_fruit()" type="image" style="float:left;"/>
+			<input id="cmd" src="comanda.png" onclick="remove_fruit()" type="image" style="float:right;"/>
 		</div>
 	</div>
-  </div>
+</div>
 </div>
 <script>
 		const idx_img = 0;
