--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 			background-size: cover;
 			padding-top: 30px;
 		}
+		.list {
+			text-align: justify;
+			text-justify: inter-word;
+		}
 	</style>
   </head>
   <body>
@@ -95,7 +99,9 @@
 	</div>
 
 	<div class="filling-cup">
-			<p><b><font id="grams" size="+1" color="#878fa3"><b>0 ml</font></b></p>
+			<p class="list">
+				<b><font id="grams" size="+1" color="#878fa3"><b>0 ml</font></b>
+			</p>
 	</div>
 
 	<div class="bottom">
@@ -149,6 +155,7 @@
 			for (let i = 0; i < ingredients.length; i += 3) {
 				tot_sum.innerHTML += ingredients[i] + ' ' + ingredients[i+1] + ' ml.' + "<br />";
 			}
+			tot_sum.innerHTML += "-------<br />";
 			tot_sum.innerHTML += total + ' ml.';
 		}
 
