--- a/test.html
+++ b/test.html
@@ -2,52 +2,24 @@
 <html>
   <head>
     <title>Test</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<style>
-		.center {
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-		}
-		.filling-cup {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-      }
-	  .comanda {
-			position: relative;
-			width: 28%;
-			height: 800px;
-			float: right;
-			padding-top: 29px;
-		}
-		.bottom {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			flex-direction: column;
-
-			position: absolute;
-			bottom: 0px;
-			margin-left: auto;
-			margin-right: auto;
-			left: 0px;
-  			right: 0px;
-		}
-	</style>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<style>
+		</style>
   </head>
-  <body>
-	<div class="comanda"  style="background-image: url('comanda.png');">
-		<img src="moodfresh.png" class="center" style="padding-bottom: 50px;">
-
-		<div class="bottom" style="background-color: #f2f200;">
-			<img src="pret.png">
-			<p>
-				<b><font id="total" size="+1" color="#878fa3">0 RON</font></b>
-			</p>
-			<input id="x" src="elimina.png" onclick="remove_fruit()" type="image"/>
-		</div>
-	</div>
-
-</body>
+	<body>
+		<script>
+			function toggleImage() {
+				var img1 = "comanda.png";
+				var img2 = "comanda_gray.png";
+					
+				var img = document.getElementById('toggleImage').src;
+				if (img.indexOf(img1) != -1) {
+					document.getElementById('toggleImage').src = img2;
+				} else {
+					document.getElementById('toggleImage').src = img1;
+				}
+			}
+		</script>
+		<img src="comanda_gray.png" id="toggleImage" onclick="toggleImage();"/>		
+	</body>
 </html>
