--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			align-items: center;
 			padding-top: 40px;
 		}
-		.group .title {
+		.title {
 			padding-bottom: 50px;
 			display: block;
 			margin-left: auto;
