--- a/test.html
+++ b/test.html
@@ -4,23 +4,32 @@
     <title>Test</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<style>
-			.button {
-				position: relative;
-				text-align: center;
-			}
-			/* Centered text */
+/*			.button {
+				display: flex;
+				justify-content: center;
+			}*/
 			.label {
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
+				display: flex;
+				padding: 20px;
+				background-color: aqua;
+				
+				background-image: url('button.png');
+				background-repeat: no-repeat;
+				background-size: contain;
 			}
 		</style>
   </head>
 	<body>
-		<div class="button">
-			<img src="button.png">
-			<div class="label">Centered</div>
-		</div>
+			<span id="Chia" class="label"></span>
+
+	<script>
+		make_button('Chia');
+
+		function make_button(fruit) {
+			var button = document.getElementById(fruit);
+			button.innerHTML = fruit;
+//			button.translate(-50%, -50%);
+		}
+	</script>	
 	</body>
 </html>
